LFCR : consistent naming for taxiways
LFKF : added stand 12B
LFKJ : renamed stands 1 and 2 to PTT1 and PTT2
LFLB : updated coordinates for SB and SM (VFR report points)
LFLJ : updated stands
LFLS : full update: stands and taxiways
LFMD : updated coordinates for SW (VFR report point)
LFME : Removed SN, added CS, SG and PA (VFR report points)
LFMK : updated taxiways names, commercial stands layout
LFPB : updated stands K1, K2, Z1, Z2, added appron S, added FBOs, updated taxiways
LFPG : Added gates I3A I3B I3C I3D I3F I3G I3H I4J I4L I4M I4N I4P I4Q I4R I4S I4T I4U I4V I4W I4X EN53 EN54 EN58 EN59 EN97 EN98 EN99 PM1 PM2 PB3 PB4 PBM S06B S07B S08B S09B R39 M09 M21 M23 P84 E15 E08 G10 G11 G12 G13 G14 G31 G35 G20 G21 G22 G23 G24, Removed gates N80 EN90 EN92 EN93 P1 P2 P3 P4 P5 M9 E13 E10 E12 A36, Added taxiways/stops DE-ICE 11 DE-ICE 12 DE-ICE 13 DE-ICE 21 DE-ICE 22 DE-ICE 23 DE-ICE 31 DE-ICE 41 DE-ICE 42 DE-ICE 43 DE-ICE 44 BM1 NW1 NW2 NW3 NW4 NE1 NE2 NE3 NE4 TB1 JN JS TG1 TG2 RN RS SE1 SE2 SE3 SE4 SW1 SW2 SW3 SW4 LINKW Aires d'essai moteur OUEST EST, Fixed some label positions, Added TORAs, Terminal names (freight), Add company terminal helper
LFPO : showing full terminal names (ORLY 1 instead of 1)
LFQQ : updated gates and taxiways
LFRK : added gates, update taxiway H1, removed taxiway B1
LFTW : Removed SN, added CS, SG, PA, BG, CZ, RD and UH (VFR report points)

**********************
SCT
**********************

LFME : added coordinates and runways for display on APP
LFNR : added coordinates and runways for display on APP

TMA Lyon : updated sector shapes
TMA Montpellier : fixed typo, remove sector 24
TMA Nantes : updated sector shapes
TMA Provence : updated sector shapes
TMA Rodez : removed

CTR LFAQ : updated sector shape
CTR LFCR : updated sector shape
CTR LFMD : updated sector shapes
CTR LFRS : updated sector shape, removed CTR2
CTR LFTW : updated sector shape

LF R35A/R35B PARIS SACLAY VERSAILLES : added for controling LFPN TWR

