@@ -1339,7 +1339,52 @@
  N043.12.54.828:E002.18.22.645:LFMK Taxiways:T3
  N043.12.54.969:E002.18.31.511:LFMK Taxiways:C
  N043.12.53.781:E002.18.34.946:LFMK Taxiways:T4
-@@ -40129,8 +39787,10 @@
+@@ -39798,15 +39456,10 @@
+ N043.19.18.019:E003.21.16.847:LFMU Taxiways:T2
+ N043.19.17.084:E003.21.22.662:LFMU Taxiways:T3
+ ;================================================= ~~ LFMM/LFMV/Gates ~~ =================================================;
+-N043.54.24.400:E004.53.50.200:LFMV Gates:1
+-N043.54.27.000:E004.53.52.900:LFMV Gates:G1
+-N043.54.22.600:E004.53.54.400:LFMV Gates:2
+-N043.54.27.300:E004.53.54.800:LFMV Gates:3
+-N043.54.23.700:E004.53.54.000:LFMV Gates:4
+-N043.54.17.600:E004.53.56.700:LFMV Gates:5
+-N043.54.16.800:E004.53.56.900:LFMV Gates:6
+-N043.54.44.400:E004.54.16.200:LFMV Gates:7
+-N043.54.42.800:E004.54.17.800:LFMV Gates:8
++N043.54.22.530:E004.53.51.000:LFMV Gates:Apron F
++N043.54.20.230:E004.53.56.940:LFMV Gates:Apron C
++N043.54.12.700:E004.53.59.490:LFMV Gates:Apron B
++N043.54.08.730:E004.54.01.820:LFMV Gates:Grass apron A
+ ;============================================== ~~ LFMM/LFMV/Points VFR ~~ ===============================================;
+ N044.03.15.000:E005.03.05.000:LFMV Points VFR:NE
+ N043.55.20.000:E004.44.30.000:LFMV Points VFR:W
+@@ -39816,14 +39469,16 @@
+ N044.03.05.000:E004.47.00.000:LFMV Points VFR:NW
+ N043.51.30.000:E004.59.15.000:LFMV Points VFR:SE
+ ;=============================================== ~~ LFMM/LFMV/Taxiways ~~ ================================================;
+-N043.54.51.200:E004.53.58.900:LFMV Taxiways:F
+-N043.54.50.700:E004.53.55.200:LFMV Taxiways:F
+-N043.54.06.000:E004.54.07.300:LFMV Taxiways:A
+-N043.54.17.500:E004.54.04.200:LFMV Taxiways:B
+-N043.54.25.300:E004.54.02.100:LFMV Taxiways:C
+-N043.54.26.700:E004.53.59.800:LFMV Taxiways:G
+-N043.54.35.100:E004.53.57.500:LFMV Taxiways:E
+-N043.54.40.500:E004.54.10.800:LFMV Taxiways:D
++N043.53.56.370:E004.54.09.540:LFMV Taxiways:A
++N043.54.07.520:E004.54.02.180:LFMV Taxiways:A1
++N043.54.10.220:E004.54.02.280:LFMV Taxiways:A2
++N043.54.13.380:E004.54.04.770:LFMV Taxiways:B
++N043.54.22.770:E004.54.01.350:LFMV Taxiways:C
++N043.54.32.460:E004.53.58.470:LFMV Taxiways:C2
++N043.54.47.850:E004.53.54.580:LFMV Taxiways:C3
++N043.54.52.350:E004.53.51.900:LFMV Taxiways:D
++N043.54.38.910:E004.54.11.100:LFMV Taxiways:E
++N043.54.17.720:E004.54.02.240:LFMV Taxiways:P
+ ;============================================== ~~ LFMM/LFMY/Points VFR ~~ ===============================================;
+ N043.42.02.000:E005.06.06.000:LFMY Points VFR:LA
+ N043.37.43.000:E005.00.26.000:LFMY Points VFR:W
+@@ -40129,8 +39784,10 @@
  N048.57.35.361:E002.26.39.115:LFPB Gates:F1
  N048.57.31.031:E002.26.35.814:LFPB Gates:F2
  N048.57.25.739:E002.26.32.880:LFPB Gates:I
@@ -1352,7 +1397,7 @@
  N048.57.11.065:E002.26.21.512:LFPB Gates:H1
  N048.57.08.900:E002.26.19.678:LFPB Gates:H2
  N048.57.06.615:E002.26.18.028:LFPB Gates:H3
-@@ -40145,6 +39805,15 @@
+@@ -40145,6 +39802,15 @@
  N048.57.23.574:E002.26.17.111:LFPB Gates:J
  N048.57.31.993:E002.26.23.162:LFPB Gates:F3
  N048.57.38.969:E002.26.27.746:LFPB Gates:E
@@ -1368,7 +1413,7 @@
  ;============================================== ~~ LFFF/LFPB/Points VFR ~~ ===============================================;
  N048.53.55.000:E002.33.26.000:LFPB Points VFR:E1
  N049.00.00.000:E002.11.06.000:LFPB Points VFR:W1
-@@ -40159,10 +39828,16 @@
+@@ -40159,10 +39825,16 @@
  N048.58.09.091:E002.26.50.979:LFPB Taxiways:B
  N048.58.04.608:E002.26.31.977:LFPB Taxiways:C4
  N048.57.59.820:E002.26.41.237:LFPB Taxiways:B
@@ -1386,7 +1431,7 @@
  N048.57.47.368:E002.25.32.200:LFPB Taxiways:A1
  N048.57.46.445:E002.25.18.869:LFPB Taxiways:A
  N048.57.48.054:E002.26.46.772:LFPB Taxiways:W5
-@@ -40175,29 +39850,48 @@
+@@ -40175,29 +39847,48 @@
  N048.57.38.089:E002.25.53.017:LFPB Taxiways:U3
  N048.57.38.520:E002.25.57.430:LFPB Taxiways:R
  N048.57.33.655:E002.25.54.895:LFPB Taxiways:A
@@ -1447,7 +1492,7 @@
  ;================================================= ~~ LFFF/LFPC/Gates ~~ =================================================;
  N049.15.07.100:E002.31.27.600:LFPC Gates:1
  N049.15.06.500:E002.31.25.600:LFPC Gates:2
-@@ -40218,463 +39912,499 @@
+@@ -40218,463 +39909,499 @@
  N049.17.52.566:E002.47.25.955:LFPG AMSR:2000
  N049.22.29.103:E001.39.30.531:LFPG AMSR:3000
  ;================================================= ~~ LFFF/LFPG/Gates ~~ =================================================;
@@ -2402,7 +2447,7 @@
  N049.00.54.126:E002.33.38.737:LFPG Gates:PH1
  N049.00.54.241:E002.33.41.028:LFPG Gates:PH2
  ;============================================== ~~ LFFF/LFPG/Points VFR ~~ ===============================================;
-@@ -40682,6 +40412,28 @@
+@@ -40682,6 +40409,28 @@
  N049.02.59.000:E002.32.51.000:LFPG Points VFR:N
  N048.58.16.000:E002.35.11.000:LFPG Points VFR:S
  N048.57.21.000:E002.36.55.000:LFPG Points VFR:ET
@@ -2431,7 +2476,7 @@
  ;=============================================== ~~ LFFF/LFPG/Taxiways ~~ ================================================;
  N049.01.29.259:E002.31.32.025:LFPG Taxiways:09L
  N049.01.35.910:E002.33.38.768:LFPG Taxiways:27R
-@@ -40709,14 +40461,6 @@
+@@ -40709,14 +40458,6 @@
  N049.01.24.557:E002.33.22.143:LFPG Taxiways:K6
  N049.01.25.094:E002.33.34.420:LFPG Taxiways:K7
  N049.01.25.554:E002.33.42.020:LFPG Taxiways:K8
@@ -2446,7 +2491,7 @@
  N049.01.12.399:E002.30.47.121:LFPG Taxiways:D1
  N049.01.13.875:E002.31.15.824:LFPG Taxiways:D3
  N049.01.14.384:E002.31.24.125:LFPG Taxiways:D4
-@@ -40748,6 +40492,17 @@
+@@ -40748,6 +40489,17 @@
  N049.01.08.449:E002.32.32.295:LFPG Taxiways:D
  N049.01.09.299:E002.32.45.786:LFPG Taxiways:D
  N049.01.09.839:E002.32.58.529:LFPG Taxiways:D
@@ -2464,7 +2509,7 @@
  N049.01.12.479:E002.32.43.968:LFPG Taxiways:Q
  N049.01.13.115:E002.32.58.150:LFPG Taxiways:Q
  N049.01.13.751:E002.33.09.665:LFPG Taxiways:Q
-@@ -40781,28 +40536,28 @@
+@@ -40781,28 +40533,28 @@
  N049.00.35.985:E002.34.51.035:LFPG Taxiways:B
  N049.00.52.351:E002.34.35.720:LFPG Taxiways:B1
  N049.00.54.164:E002.34.35.380:LFPG Taxiways:B2
@@ -2507,7 +2552,7 @@
  N049.01.12.551:E002.33.47.474:LFPG Taxiways:QB7
  N049.01.11.533:E002.33.58.916:LFPG Taxiways:QB8
  N049.01.12.518:E002.34.15.201:LFPG Taxiways:QB9
-@@ -40817,16 +40572,17 @@
+@@ -40817,16 +40569,17 @@
  N049.00.53.354:E002.30.56.461:LFPG Taxiways:M
  N049.00.55.193:E002.31.26.572:LFPG Taxiways:M
  N049.00.59.756:E002.31.50.972:LFPG Taxiways:M
@@ -2531,7 +2576,7 @@
  N049.01.04.090:E002.32.22.104:LFPG Taxiways:A
  N049.00.55.469:E002.32.10.767:LFPG Taxiways:A
  N049.00.47.432:E002.32.12.013:LFPG Taxiways:A
-@@ -40836,8 +40592,8 @@
+@@ -40836,8 +40589,8 @@
  N049.00.47.228:E002.32.48.665:LFPG Taxiways:A
  N049.01.01.054:E002.32.44.097:LFPG Taxiways:A
  N049.01.04.391:E002.32.31.429:LFPG Taxiways:A
@@ -2542,7 +2587,7 @@
  N049.01.05.617:E002.32.08.690:LFPG Taxiways:DA1
  N049.01.02.200:E002.32.09.130:LFPG Taxiways:DA1
  N049.00.47.435:E002.32.26.265:LFPG Taxiways:A3
-@@ -40858,6 +40614,14 @@
+@@ -40858,6 +40611,14 @@
  N048.59.57.921:E002.33.19.337:LFPG Taxiways:N
  N048.59.54.596:E002.33.24.001:LFPG Taxiways:N
  N048.59.53.265:E002.33.31.302:LFPG Taxiways:N
@@ -2557,7 +2602,7 @@
  N049.00.59.437:E002.33.05.314:LFPG Taxiways:F
  N049.00.52.520:E002.33.06.450:LFPG Taxiways:F
  N049.00.46.880:E002.33.08.234:LFPG Taxiways:F
-@@ -40868,7 +40632,7 @@
+@@ -40868,7 +40629,7 @@
  N049.00.44.470:E002.33.01.865:LFPG Taxiways:FN1
  N049.00.25.333:E002.33.10.379:LFPG Taxiways:FN2
  N049.00.19.544:E002.33.13.390:LFPG Taxiways:FN3
@@ -2566,7 +2611,7 @@
  N049.00.01.414:E002.33.20.918:LFPG Taxiways:FN5
  N049.00.26.384:E002.33.20.513:LFPG Taxiways:E
  N049.00.28.672:E002.33.45.599:LFPG Taxiways:E
-@@ -40901,11 +40665,12 @@
+@@ -40901,11 +40662,12 @@
  N049.00.21.853:E002.33.42.492:LFPG Taxiways:G3
  N049.00.22.943:E002.34.02.495:LFPG Taxiways:G3
  N049.00.24.009:E002.34.14.934:LFPG Taxiways:G3
@@ -2582,7 +2627,7 @@
  N049.00.28.865:E002.34.19.680:LFPG Taxiways:TF1
  N049.00.30.329:E002.34.32.332:LFPG Taxiways:TF2
  N049.00.30.643:E002.34.38.233:LFPG Taxiways:TF3
-@@ -40938,7 +40703,11 @@
+@@ -40938,7 +40700,11 @@
  N049.00.14.750:E002.35.43.071:LFPG Taxiways:GE8
  N049.00.10.336:E002.35.43.486:LFPG Taxiways:GE9
  N049.00.06.359:E002.35.43.901:LFPG Taxiways:GE10
@@ -2595,7 +2640,7 @@
  N049.00.28.970:E002.35.12.420:LFPG Taxiways:TK1
  N049.00.29.352:E002.35.17.237:LFPG Taxiways:TK2
  N049.00.02.600:E002.35.15.410:LFPG Taxiways:TK3
-@@ -40955,16 +40724,20 @@
+@@ -40955,16 +40721,20 @@
  N049.00.15.018:E002.35.47.142:LFPG Taxiways:TJ3
  N049.00.11.287:E002.35.47.887:LFPG Taxiways:TJ4
  N049.00.09.822:E002.35.48.152:LFPG Taxiways:TJ5
@@ -2626,7 +2671,7 @@
  N049.00.08.083:E002.36.10.351:LFPG Taxiways:P
  N049.00.07.636:E002.36.03.342:LFPG Taxiways:P
  N049.00.07.189:E002.35.55.945:LFPG Taxiways:P
-@@ -40983,9 +40756,9 @@
+@@ -40983,9 +40753,9 @@
  N049.00.11.510:E002.36.13.534:LFPG Taxiways:P5
  N049.00.11.020:E002.36.02.632:LFPG Taxiways:P5
  N049.00.10.529:E002.35.53.661:LFPG Taxiways:P5
@@ -2639,7 +2684,7 @@
  N048.59.59.578:E002.34.22.287:LFPG Taxiways:TE1
  N049.00.00.355:E002.34.38.547:LFPG Taxiways:TE2
  N049.00.01.703:E002.34.59.914:LFPG Taxiways:TE3
-@@ -41010,6 +40783,8 @@
+@@ -41010,6 +40780,8 @@
  N049.00.04.870:E002.36.24.715:LFPG Taxiways:R1
  N048.59.57.438:E002.33.22.331:LFPG Taxiways:RN1
  N048.59.55.344:E002.33.28.561:LFPG Taxiways:RN2
@@ -2648,7 +2693,7 @@
  N049.00.04.359:E002.35.41.847:LFPG Taxiways:RP10
  N049.00.04.678:E002.35.46.909:LFPG Taxiways:RP11
  N049.00.05.125:E002.35.53.333:LFPG Taxiways:RP12
-@@ -41066,18 +40841,17 @@
+@@ -41066,18 +40838,17 @@
  N048.59.35.181:E002.32.09.454:LFPG Taxiways:C2
  N048.59.23.752:E002.32.04.003:LFPG Taxiways:UC1
  N048.59.32.435:E002.32.02.932:LFPG Taxiways:UC2
@@ -2672,7 +2717,7 @@
  N048.59.46.743:E002.33.08.109:LFPG Taxiways:T1
  N048.59.47.126:E002.33.17.356:LFPG Taxiways:T2
  N048.59.47.445:E002.33.29.524:LFPG Taxiways:T3
-@@ -41096,11 +40870,6 @@
+@@ -41096,11 +40867,6 @@
  N048.59.52.314:E002.34.45.278:LFPG Taxiways:W3
  N048.59.54.293:E002.35.03.772:LFPG Taxiways:W5
  N048.59.54.995:E002.35.27.523:LFPG Taxiways:W6
@@ -2684,7 +2729,7 @@
  N048.59.43.962:E002.33.37.863:LFPG Taxiways:S1
  N048.59.44.473:E002.33.46.818:LFPG Taxiways:S2
  N048.59.44.984:E002.33.58.577:LFPG Taxiways:S3
-@@ -41114,10 +40883,14 @@
+@@ -41114,10 +40880,14 @@
  N048.59.46.654:E002.35.45.029:LFPG Taxiways:S
  N048.59.47.053:E002.35.55.249:LFPG Taxiways:S
  N048.59.47.452:E002.36.03.158:LFPG Taxiways:S
@@ -2703,7 +2748,7 @@
  N048.59.36.757:E002.33.55.158:LFPG Taxiways:V1
  N048.59.36.997:E002.34.01.120:LFPG Taxiways:V2
  N048.59.39.152:E002.34.14.504:LFPG Taxiways:V3
-@@ -41127,7 +40900,7 @@
+@@ -41127,7 +40897,7 @@
  N048.59.43.621:E002.35.58.048:LFPG Taxiways:V7
  N048.59.44.020:E002.36.07.417:LFPG Taxiways:V9
  N049.00.29.583:E002.32.59.474:LFPG Taxiways:MIDDLE 1
@@ -2712,7 +2757,7 @@
  N049.00.40.808:E002.34.44.919:LFPG Taxiways:MIDDLE 3
  N049.00.41.407:E002.35.00.889:LFPG Taxiways:MIDDLE 4
  N049.00.44.577:E002.29.35.505:LFPG Taxiways:EM1
-@@ -41139,13 +40912,21 @@
+@@ -41139,13 +40909,21 @@
  N049.00.52.535:E002.31.11.216:LFPG Taxiways:EM7
  N049.00.52.842:E002.31.18.147:LFPG Taxiways:EM8
  N049.00.46.670:E002.30.20.960:LFPG Taxiways:EM23
@@ -2741,7 +2786,7 @@
  ;=============================================== ~~ LFFF/LFPG/Terminaux ~~ ===============================================;
  N049.00.09.573:E002.33.45.295:LFPG Terminaux:2A
  N049.00.16.105:E002.33.43.604:LFPG Terminaux:2B
-@@ -41154,24 +40935,41 @@
+@@ -41154,24 +40932,41 @@
  N049.00.11.792:E002.34.38.471:LFPG Terminaux:2E
  N049.00.19.187:E002.34.36.780:LFPG Terminaux:2F
  N049.00.52.341:E002.32.30.510:LFPG Terminaux:1
@@ -2788,7 +2833,7 @@
  ;============================================== ~~ LFFF/LFPL/Points VFR ~~ ===============================================;
  N048.49.48.000:E002.42.22.000:LFPL Points VFR:E
  ;================================================= ~~ LFFF/LFPM/Gates ~~ =================================================;
-@@ -41282,10 +41080,10 @@
+@@ -41282,10 +41077,10 @@
  N048.44.50.768:E002.06.08.178:LFPN Taxiways:W2
  N048.44.50.114:E002.05.59.679:LFPN Taxiways:W3
  ;================================================= ~~ LFFF/LFPO/Gates ~~ =================================================;
@@ -2803,7 +2848,7 @@
  N048.43.56.717:E002.22.27.619:LFPO Gates:TERMINAL
  N048.43.57.552:E002.22.32.712:LFPO Gates:FRET
  N048.44.40.613:E002.22.26.818:LFPO Gates:HANGAR N2
-@@ -41629,43 +41427,58 @@
+@@ -41629,43 +41424,58 @@
  N050.34.08.096:E003.05.42.955:LFQQ Gates:Aviation Generale
  N050.34.26.242:E003.05.38.970:LFQQ Gates:H
  N050.34.23.110:E003.05.40.522:LFQQ Gates:Parking E
@@ -2899,7 +2944,7 @@
  ;============================================== ~~ LFFF/LFQQ/Points VFR ~~ ===============================================;
  N050.31.06.000:E003.08.01.000:LFQQ Points VFR:SA
  N050.28.16.000:E003.13.40.000:LFQQ Points VFR:SE
-@@ -41674,29 +41487,24 @@
+@@ -41674,29 +41484,24 @@
  N050.31.22.000:E002.47.35.000:LFQQ Points VFR:W
  N050.36.11.000:E003.06.48.000:LFQQ Points VFR:NG
  ;=============================================== ~~ LFFF/LFQQ/Taxiways ~~ ================================================;
@@ -2947,7 +2992,7 @@
  ;================================================= ~~ LFFF/LFQT/Gates ~~ =================================================;
  N050.37.35.300:E002.38.48.400:LFQT Gates:1
  N050.37.36.100:E002.38.49.200:LFQT Gates:2
-@@ -42007,9 +41815,12 @@
+@@ -42007,9 +41812,12 @@
  N047.33.42.989:W000.18.31.691:LFRJ Taxiways:C
  N047.33.33.490:W000.18.44.476:LFRJ Taxiways:S
  ;================================================= ~~ LFRR/LFRK/Gates ~~ =================================================;
@@ -2963,7 +3008,7 @@
  N049.10.53.814:W000.27.35.066:LFRK Gates:Parking Herbe
  N049.11.00.057:W000.27.34.632:LFRK Gates:Terminal
  N049.10.56.282:W000.27.26.554:LFRK Gates:TWR
-@@ -42024,40 +41835,6 @@
+@@ -42024,40 +41832,6 @@
  N049.04.41.000:W000.38.29.000:LFRK Points VFR:SW
  N049.11.37.000:W000.51.52.000:LFRK Points VFR:W
  ;=============================================== ~~ LFRR/LFRK/Taxiways ~~ ================================================;
@@ -3004,7 +3049,7 @@
  N049.10.48.454:W000.27.45.892:LFRK Taxiways:A1
  N049.10.55.431:W000.27.32.807:LFRK Taxiways:A
  N049.10.51.310:W000.27.31.005:LFRK Taxiways:H
-@@ -42065,8 +41842,23 @@
+@@ -42065,8 +41839,23 @@
  N049.10.40.844:W000.27.08.240:LFRK Taxiways:H
  N049.10.32.656:W000.26.53.764:LFRK Taxiways:H3
  N049.10.44.361:W000.27.19.379:LFRK Taxiways:H2
@@ -3030,7 +3075,7 @@
  ;================================================= ~~ LFRR/LFRN/AMSR ~~ ==================================================;
  N048.39.32.140:W002.19.22.003:LFRN AMSR:2000
  N048.17.02.140:W001.59.37.003:LFRN AMSR:2700
-@@ -42920,7 +42712,13 @@
+@@ -42920,7 +42709,13 @@
  N043.49.49.000:E004.38.00.000:LFTW Points VFR:BC
  N043.39.59.000:E004.35.15.000:LFTW Points VFR:AL
  N043.40.55.000:E004.12.50.000:LFTW Points VFR:AS
